# drf_store

./: .env.example  pyproject.toml  readme.md
config/: settings.py  urls.py
retail_chain/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  views.py
retail_chain/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
